--- a/styles/canvas.css
+++ b/styles/canvas.css
@@ -39,6 +39,15 @@ canvas {
   cursor: crosshair;
 }
 
+#canvasWrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+}
+
 #animationPanel {
   position: absolute;
   left: 0;
@@ -47,6 +56,18 @@ canvas {
   width: 240px;
   background: #f5f5f5;
   border-right: 1px solid #ccc;
+  overflow-y: auto;
+  padding: 10px;
+}
+
+#interactionPanel {
+  position: absolute;
+  right: 0;
+  top: 0px;
+  bottom: 0;
+  width: 240px;
+  background: #f5f5f5;
+  border-left: 1px solid #ccc;
   overflow-y: auto;
   padding: 10px;
 }
